make poast to mongodb

--- a/views/pad.ejs
+++ b/views/pad.ejs
@@ -17,7 +17,7 @@
 <body class="container-fluid">
 
   <section class="row">
-    <button id='postShit' onclick='postData()'>Send me</button>
+    <button id='postShit' onclick='postPopup()'>Send me</button>
     <textarea class="col-md-6 full-height" id="pad">
 
 #this is a Title Brah!
