--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -4,14 +4,35 @@
 
 <html>
 <head>
-  <title>All the Poast</title>
+  <title>Bradius Pontificae</title>
+
   <!-- bootstrap here -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+  <link rel='stylesheet'
+    href='http://maxcdn.bootstrapcdn.com/font-aewsome/4.1.0/css/font-awesome.min.css'>
+
+  <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Tangerine'>
+  <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Arvo'>
+
   <!-- syntax highlighting -->
-  <link
-    href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/styles/default.min.css" rel="stylesheet">
+  <link  rel="stylesheet"
+    href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/styles/default.min.css">
+
+  <!-- My Website Stylesheet -->
+  <link rel="stylesheet" href='style.css'>
 </head>
 <body>
+  <div class="section-colored pont-headers">
+    <img class="pont-pic" src="assets/bradimus.jpg"/>
+    <div class='bp-pagetop'>
+      <span class='bp-title'>Bradius Pontificae</span>
+      <span class='bp-subtitle'>A Blog for Plebs</span>
+    </div>
+    <img class='pont-pic-right' src='assets/bradimusright.jpg'/>
+  </div>
+
   <h1>These are Poast</h1>
   <span id='stickit'></span>
 
