--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -23,7 +23,7 @@
   <!-- My Website Stylesheet -->
   <link rel="stylesheet" href='style.css'>
 </head>
-<body>
+<body style='background: #7b584a;'>
   <div class="section-colored pont-headers">
     <img class="pont-pic" src="assets/bradimus.jpg"/>
     <div class='bp-pagetop'>
@@ -33,8 +33,19 @@
     <img class='pont-pic-right' src='assets/bradimusright.jpg'/>
   </div>
 
-  <h1>These are Poast</h1>
-  <span id='stickit'></span>
+  <div class="col-md-3 full-height bp-archive">
+    <div class='col-md-12 bp-betterfont'>
+      <h2>About This</h2>
+      My name is Brad.  I like long walks on the beach and Cokes with two straws.
+    </div>
+    <div class='col-md-12 bp-betterfont'>
+      <h2>Archives</h2>
+      <span id='stickit'></span>
+    </div>
+  </div>
+  <div class="col-md-6 full-height bp-poast">
+
+  </div>
 
   <script src="readTitles.js"></script>
 </body>
