--- a/public/style.css
+++ b/public/style.css
@@ -71,3 +71,15 @@ html, body, section, .full-height {
 .bp-betterfont {
   font-family: 'Arvo', serif;
 }
+
+.bp-headeryear {
+  font-size: 24px;
+  cursor: zoom-in;
+}
+.bp-postlist-item {
+  margin-left: 10%;
+  font-size: 18px;
+}
+/* .bp-postlist {
+  display: none;
+} */
