--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -45,6 +45,8 @@
 
   </div>
 
+  <script src="https://cdn.rawgit.com/showdownjs/showdown/1.0.2/dist/showdown.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/highlight.min.js"></script>
   <script src="readTitles.js"></script>
 </body>
 </html>
