--- a/views/pad.ejs
+++ b/views/pad.ejs
@@ -18,39 +18,9 @@
 
   <section class="row">
     <button id='postShit' onclick='postPopup()'>Send me</button>
-    <textarea class="col-md-6 full-height" id="pad">
-
-#this is a Title Brah!
-Markdown: [Google It](https:www.google.com) bitch
-
-![alt text](winter.jpeg "winter is coming")
-
-Some syntax highlighting examples:
-
-```java
-// Im Java code, look at me!
-public class MyThread extends Thread {
-  public void run() {
-    System.out.println("Im Mr. Meeseks, look at ME!");
-    (new MyThread()).start();
-  }
-
-  public static void main(String args[]) {
-    (new MyThread()).start();
-  }
-}
-```
-```python
-# this is a python comment
-def fib(n):
-    return n if n < 2 else fib(n-1) + fib(n-2)
-```
-```javascript
-// I know what you really meant
-window.location = "meatspin.com";
-```
-
-    </textarea>
+    <button id='retrieveShit' onclick='retrieve()'>Get me</button>
+    <textarea id='titlearea'>title here</textarea>
+    <textarea class="col-md-6 full-height" id="pad"></textarea>
     <div class="col-md-6 full-height" id="markdown"></div>
   </section>
 
